<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_add_exam_coordinator_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:fitsSystemWindows="true"
    tools:context="ml.janewon.schoolhelper.AddExamActivity">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/activity_add_exam_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:background="@null"
                android:drawableLeft="@drawable/ic_school_black_24dp"
                android:drawablePadding="32dp"
                android:drawableStart="@drawable/ic_school_black_24dp"
                android:hint="@string/activity_add_exam_name"
                android:padding="16dp" />

            <TextView
                android:id="@+id/activity_add_exam_subject"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:background="?android:attr/selectableItemBackground"
                android:drawableLeft="@drawable/ic_subject_black_24dp"
                android:drawablePadding="32dp"
                android:drawableStart="@drawable/ic_subject_black_24dp"
                android:hint="@string/activity_add_exam_subject"
                android:padding="16dp"
                android:textColor="#000000"
                android:textSize="18sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="#E0E0E0" />

            <TextView
                android:id="@+id/activity_add_exam_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:background="?android:attr/selectableItemBackground"
                android:drawableLeft="@drawable/ic_event_note_black_24dp"
                android:drawablePadding="32dp"
                android:drawableStart="@drawable/ic_event_note_black_24dp"
                android:hint="@string/activity_add_exam_date"
                android:padding="16dp"
                android:textColor="#000000"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/activity_add_exam_time_from"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:background="?android:attr/selectableItemBackground"
                android:drawableLeft="@drawable/ic_schedule_black_24dp"
                android:drawablePadding="32dp"
                android:drawableStart="@drawable/ic_schedule_black_24dp"
                android:hint="@string/activity_add_exam_time_from"
                android:padding="16dp"
                android:textColor="#000000"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/activity_add_exam_time_to"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?android:attr/selectableItemBackground"
                android:hint="@string/activity_add_exam_time_to"
                android:paddingBottom="16dp"
                android:paddingEnd="16dp"
                android:paddingLeft="72dp"
                android:paddingRight="16dp"
                android:paddingStart="72dp"
                android:paddingTop="16dp"
                android:textColor="#000000"
                android:textSize="18sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="#E0E0E0" />

            <EditText
                android:id="@+id/activity_add_exam_score"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:background="@null"
                android:drawableLeft="@drawable/ic_grade_black_24dp"
                android:drawablePadding="32dp"
                android:drawableStart="@drawable/ic_grade_black_24dp"
                android:hint="@string/activity_add_exam_score"
                android:padding="16dp" />

            <EditText
                android:id="@+id/activity_add_exam_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:background="@null"
                android:drawableLeft="@drawable/ic_filter_list_black_24dp"
                android:drawablePadding="32dp"
                android:drawableStart="@drawable/ic_filter_list_black_24dp"
                android:hint="@string/activity_add_exam_type"
                android:padding="16dp" />

            <EditText
                android:id="@+id/activity_add_exam_detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:background="@null"
                android:drawableLeft="@drawable/ic_toc_black_24dp"
                android:drawablePadding="32dp"
                android:drawableStart="@drawable/ic_toc_black_24dp"
                android:hint="@string/activity_add_exam_detail"
                android:padding="16dp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="#E0E0E0" />

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

</android.support.design.widget.CoordinatorLayout>
