<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/activity_add_assignment_coordinator_layout"
    android:background="#FFFFFF"
    tools:context="ml.janewon.schoolhelper.AddAssignmentActivity" >

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/activity_add_assignment_subject"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:drawableLeft="@drawable/ic_subject_black_24dp"
                android:drawablePadding="32dp"
                android:drawableStart="@drawable/ic_subject_black_24dp"
                android:hint="@string/activity_add_assignment_subject_hint"
                android:padding="16dp"
                android:textColor="#000000"
                android:textSize="18sp"
                android:background="?android:attr/selectableItemBackground"/>

            <EditText
                android:id="@+id/activity_add_assignment_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:background="@null"
                android:drawableLeft="@drawable/ic_title_black_24dp"
                android:drawablePadding="32dp"
                android:drawableStart="@drawable/ic_title_black_24dp"
                android:hint="@string/activity_add_assignment_title_text"
                android:padding="16dp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="#E0E0E0" />

            <TextView
                android:id="@+id/activity_add_assignment_due_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:drawableLeft="@drawable/ic_event_note_black_24dp"
                android:drawablePadding="32dp"
                android:drawableStart="@drawable/ic_event_note_black_24dp"
                android:hint="@string/activity_add_assignment_due_date"
                android:padding="16dp"
                android:textColor="#000000"
                android:textSize="18sp"
                android:background="?android:attr/selectableItemBackground"/>

            <TextView
                android:id="@+id/activity_add_assignment_due_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:drawableLeft="@drawable/ic_schedule_black_24dp"
                android:drawablePadding="32dp"
                android:drawableStart="@drawable/ic_schedule_black_24dp"
                android:hint="@string/activity_add_assignment_due_time"
                android:padding="16dp"
                android:textColor="#000000"
                android:textSize="18sp"
                android:background="?android:attr/selectableItemBackground"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="#E0E0E0" />

            <EditText
                android:id="@+id/activity_add_assignment_detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:background="@null"
                android:drawableLeft="@drawable/ic_toc_black_24dp"
                android:drawablePadding="32dp"
                android:drawableStart="@drawable/ic_toc_black_24dp"
                android:hint="@string/activity_add_assignment_detail_text"
                android:padding="16dp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="#E0E0E0"/>

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

</android.support.design.widget.CoordinatorLayout>
